--- a/service-web/src/views/LandingPage/landing-page.css
+++ b/service-web/src/views/LandingPage/landing-page.css
@@ -34,26 +34,27 @@
   position: relative;
   z-index:1;
   clear: both;
-  margin-right: 29px;
+  /*margin-right: 29px;*/
   float: right;
   line-height: 2em;
   font-weight: 500;
   font-family: 'Avenir';
-  margin-bottom: 45px;
+  margin-bottom: 50px;
 }
-.circle-whit span:after {
-  content: '';
-  border-right: 5px solid #fff;
-  height: 10vh;
-  display: inherit;
-  margin-right: 14px;
-  text-align: center;
-  z-index: 1;
+/*.circle-whit span:after {*/
+  /*content: '';*/
+  /*border-right: 5px solid #fff;*/
+  /*height: 10vh;*/
+  /*display: inherit;*/
+  /*margin-right: 14px;*/
+  /*text-align: center;*/
+  /*z-index: 1;*/
+/*}*/
+.circle-whit span.circle-2 {
+  margin-bottom: 59px;
 }
-.circle-whit span:last-child:after {
-  content:'';
-  border-right: transparent;
-  height: auto;
+.circle-whit span.circle-3 {
+  margin-bottom: 42px;
 }
 .circle-whit span:last-child {
   margin-bottom: 0;
@@ -79,6 +80,16 @@
   transform: rotate(225deg);
   -webkit-transform: rotate(225deg);
 }
+.how-it-work-circle {
+ position: absolute;
+}
+.how-it-work-circle::after {
+  border-left: 5px solid #fff;
+  height: 100%;
+  position: absolute;
+  content: '';
+  margin-left: 13px;
+}
 @media screen and (max-width: 27em) {
   .read-more:after {
     display: none;
@@ -92,5 +103,29 @@
   .back-to-top-btn .vm-back-top .up-arrow {
     vertical-align: middle;
     margin-top: 3px;
+  }
+  .how-it-work-circle::after {
+    margin-left: 0;
+    right: 13px;
+  }
+  .how-it-work-circle {
+    margin-top: 9px;
+    position: absolute;
+    left: 12px;
+  }
+  .circle-whit span {
+    margin-bottom: 37px;
+    margin-right: 0;
+  }
+  .circle-whit span.circle-2{
+    margin-bottom:37px;
+  }
+  .circle-whit span.circle-3{
+    margin-bottom:30px;
+  }
+}
+@media screen and (max-width: 479px) {
+  .how-it-work-circle {
+    left: 20px;
   }
 }
